fixed downscale image blurry on Chrome

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   padding: 0;
 
   font-family: inherit;
+  image-rendering: -webkit-optimize-contrast;
 }
 
 #root {
